--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 heart_failure_prediction.csv
 data/heart_2022_with_nans.csv
 data/heart_2022_clean.csv
+data/heart_2022_with_nans.csv
+data/heart_2022_clean.csv
