--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,5 @@
 .idea/
 
 # Ignorer les datasets
-heart_failure_prediction.csv
-data/heart_2022_with_nans.csv
-data/heart_2022_clean.csv
-data/heart_2022_with_nans.csv
+heart_failure_prediction.csvdata/heart_2022_with_nans.csv
 data/heart_2022_clean.csv
